[package]
name = "todo-actix"
version = "0.1.0"
authors = ["Hidayatullah Agung <hidayatullah@qasir.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = {version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"